--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,27 +1,88 @@
-<div class="jumbotron view mask rgba-blue-light card-image">
-    <div class="text-white mask rgba-blue-light pattern-1 text-center py-5 px-4">
-        <div>
-            <div class="container-fluid">
-                <h1 id="title">NEWS COLLECTION</h1>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-xl-12">
-                        <p class="mx-5 mb-5">Search the latest news in a variety of topics and save to your account</p>
-                    </div>
-                    <div class="col-xs-12 col-md-6 col-xl-6 vertical">
-                        <p class="subheading">Brought to you by:</p>
-                        <img src="/assets/images/The_New_York_Times_Logo.png" alt="The New York Times Logo">
-                        <img src="/assets/images/The_Guardian_logo_logotype.png" alt="The New York Times Logo">
+<header>
 
-                    </div>
-                    <div class="vertical col-xs-12 col-md-6 col-xl-6">
-                        <a href="/search" class="btn btn-white btn-md"><i class="fas mr-2 fa-search"></i>Get Started</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+    <a class="navbar-brand" href="/"><strong>News Collection</strong></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Search Articles <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/saved">Saved Articles</a>
+        </li>
+      </ul>
     </div>
-</div>
-</div>
-</div>
+  </nav>
+
+  <div class="view intro-2" style="">
+    <div class="full-bg-img">
+      <div class="mask rgba-blue-light pattern-1 flex-center">
+        <div class="container text-center white-text wow fadeInUp">
+          <h1 class="title">NEWS COLLECTION</h1>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+</header>
+<main class="main-content">
+  <div class="heading mask pattern-1">
+    <a class="btn btn-primary" id="scrape">Search<i class="fas pl-2 fa-share-square"></i></a>
+
+  </div>
+
+  <div id="list-container" class="container-fluid">
+    <div class="row">
+      {{#if article}}
+      {{#each article}}
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <div class="card">
+          <a>
+            <div class="card-img-top mask rgba-blue-strong">
+              <img src="{{this.image}}" height="200px" width="100%">
+            </div>
+            <div class="card-body">
+              <h2 class="card-title">{{this.headline}}</h2>
+              <hr>
+              <p class="byline">{{this.author}}</small>
+                <p class="card-text">{{this.summary}}</p>
+            </div>
+          </a>
+          <div class="text-center pb-3 save-article-button">
+            <a class="btn save-article btn-primary" data-id={{this._id}}>Save Article<i class="fas pl-2 fa-share-square"></i></a>
+          </div>
+        </div>
+      </div>
+      {{/ each}}
+      {{else}}
+      <div class="user-message col-xs-12">
+        <p class="user-message">Sorry, we couldn't find any articles for you</p>
+      </div>
+      {{/if}}
+    </div>
+  </div>
+
+  <!-- ---------------------------------- ARTICLE SAVED MODAL ------------------------------------------------>
+
+  <div class="modal" id="article-saved" role="dialog" aria-labelledby="myModalLabel" data-backdrop="false">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header text-center">
+          <h4 class="sent-modal-text modal-title w-100 font-weight-bold">Article Saved to your collection!</h4>
+          <button type="button" class="close-modal" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+          <div class="modal-body text-center">
+            <p class="save-link">View your saved articles <a href="/saved">here</a></p>
+          </div>
+      </div>
+    </div>
+  </div>
+
+</main>
