--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,7 +1,7 @@
 <header>
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-        <a class="navbar-brand" href="#"><strong>News Collection</strong></a>
+        <a class="navbar-brand" href="/"><strong>News Collection</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,13 +9,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Search Articles <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/saved">Saved Articles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/search">Search Articles</a>
                 </li>
             </ul>
         </div>
@@ -42,69 +39,37 @@
     <div id="list-container" class="container-fluid">
         <div class="row">
 
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+            {{#each article}}
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                 <div class="card">
                     {{!-- <button type="button" class="close-modal" data-dismiss="modal" aria-label="Close"> --}}
                     <span class="delete-article" aria-hidden="true"><i class="fas fa-2x fa-times-circle"></i></span>
                     </button>
                     <a>
                         <div class="card-img-top mask rgba-blue-strong">
-                            <img src="/assets/images/travel.jpg" width="100%">
+                            <img src="{{this.image}}" width="100%">
                         </div>
                         <div class="card-body">
-                            <h2 class="card-title">Headline Goes Here!</h2>
+                            <h2 class="card-title">{{this.headline}}</h2>
                             <hr>
-                            <p class="byline"><span>By: </span>Author's Name</small>
-                                <p class="card-text">Here is where the summary of the article goes here. And the whole
-                                    card is a
-                                    clickable
-                                    link to the new
-                                    york time's article</p>
+                            <p class="byline"><span>By: </span>{{this.author}}</small>
+                                <p class="card-text">{{this.summary}}</p>
                         </div>
                     </a>
                     <div class="button-container">
                         <div class="text-center pb-3 add-comment-button">
-                            <a class="btn btn-primary" data-userid={{id}}>Add Comment<i
+                            <a class="btn btn-primary" data-id={{this._id}}>Add Comment<i
                                     class="fas pl-2 fa-plus"></i></a>
                         </div>
                         <div class="text-center pb-3 view-comments-button">
-                            <a class="btn btn-primary" data-userid={{id}}>View<i class="far pl-2 fa-eye"></i></a>
+                            <a class="btn btn-primary" data-id={{this._id}}>View<i class="far pl-2 fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
+
             </div>
-
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                <div class="card">
-                    <span class="delete-article" aria-hidden="true"><i class="fas fa-2x fa-times-circle"></i></span>
-                    <a>
-                        <div class="card-img-top mask rgba-blue-strong">
-                            <img src="/assets/images/travel.jpg" width="100%">
-                        </div>
-                        <div class="card-body">
-                            <h2 class="card-title">Headline Goes Here!</h2>
-                            <hr>
-                            <p class="byline"><span>By: </span>Author's Name</small>
-                                <p class="card-text">Here is where the summary of the article goes here. And the whole
-                                    card is a
-                                    clickable
-                                    link to the new
-                                    york time's article</p>
-                        </div>
-                    </a>
-                    <div class="button-container">
-                        <div class="text-center pb-3 add-comment-button">
-                            <a class="btn btn-primary" data-userid={{id}}>Add Comment<i
-                                    class="fas pl-2 fa-plus"></i></a>
-                        </div>
-                        <div class="text-center pb-3 view-comments-button">
-                            <a class="btn btn-primary" data-userid={{id}}>View<i class="far pl-2 fa-eye"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
+            {{/each}}
+            
         </div>
     </div>
 
@@ -116,7 +81,7 @@
             <div class="modal-content">
                 <div class="modal-header text-center">
                     <h4 class="sign-in-text modal-title w-100 font-weight-bold">Add New Comment</h4>
-                    <button type="submit" class="close-modal" data-dismiss="modal" aria-label="Close">
+                    <button class="close-modal" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -149,7 +114,8 @@
                 </div>
 
                 <div class="comment-container">
-                    <span class="delete-comment" aria-hidden="true">Delete Comment<i class="fas ml-2 fa-lg fa-times-circle"></i></span>
+                    <span class="delete-comment" aria-hidden="true">Delete Comment<i
+                            class="fas ml-2 fa-lg fa-times-circle"></i></span>
                     <p>Here is my comment about this news article. I think this is a great article, I need to remember
                         such and such points from the article so I can reference it later.</p>
                 </div>
