Save functionality working and styling complete

--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -133,7 +133,7 @@ header {
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
-    color: $accent;
+    color: #e74c3c;
   }
   .button-container {
     display: flex;
