--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -42,12 +42,13 @@
             {{#each article}}
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                 <div class="card">
-                    {{!-- <button type="button" class="close-modal" data-dismiss="modal" aria-label="Close"> --}}
-                    <span class="delete-article" aria-hidden="true"><i class="fas fa-2x fa-times-circle"></i></span>
+                    <span class="delete-article" data-id={{this._id}} aria-hidden="true">Delete Article<i
+                            class="fas fa-2x fa-times-circle"></i></span>
                     </button>
-                    <a>
+                    <a href={{this.link}}>
+
                         <div class="card-img-top mask rgba-blue-strong">
-                            <img src="{{this.image}}" width="100%">
+                            <img src={{this.image}} height="200px" width="100%">
                         </div>
                         <div class="card-body">
                             <h2 class="card-title">{{this.headline}}</h2>
@@ -69,12 +70,13 @@
 
             </div>
             {{/each}}
-            
+
         </div>
     </div>
 
     <!-- ---------------------------------- ADD NEW COMMENT MODAL FORM ------------------------------------------------>
-
+    {{#each note}}
+    {{/each}}
     <div class="modal modal-lg" id="add-comment-form" role="dialog" aria-labelledby="myModalLabel"
         data-backdrop="false">
         <div class="modal-dialog" role="document">
@@ -88,12 +90,13 @@
                 <form id="newTaskForm" class="modal-body mx-3">
 
                     <div class="form-group shadow-textarea">
-                        <textarea class="form-control z-depth-1" id="exampleFormControlTextarea6" rows="3"
+                        <textarea class="form-control z-depth-1" id="add-comment-text-submit" rows="3"
                             placeholder="Add comment here..."></textarea>
                     </div>
 
                     <div class="modal-footer d-flex justify-content-center">
-                        <button type="submit" id="taskSubmit" class="btn btn-primary">Submit</button>
+                        <button type="submit" id="add-comment" data-note-id={{this._id}}
+                            data-article-id={{this.article}} class="btn btn-primary">Submit</button>
                     </div>
                 </form>
             </div>
@@ -101,7 +104,8 @@
     </div>
 
     <!-- ---------------------------------- VIEW COMMENTS MODAL ------------------------------------------------>
-
+    {{#if this.notes}}
+    {{#each this.notes}}
     <div class="modal modal-lg" id="view-comments-modal" role="dialog" aria-labelledby="myModalLabel"
         data-backdrop="false">
         <div class="modal-dialog" role="document">
@@ -114,16 +118,35 @@
                 </div>
 
                 <div class="comment-container">
-                    <span class="delete-comment" aria-hidden="true">Delete Comment<i
-                            class="fas ml-2 fa-lg fa-times-circle"></i></span>
-                    <p>Here is my comment about this news article. I think this is a great article, I need to remember
-                        such and such points from the article so I can reference it later.</p>
+                    <span class="delete-comment" data-note-id={{this._id}} data-article-id={{this.article}}
+                        aria-hidden="true">Delete Comment<i class="fas ml-2 fa-lg fa-times-circle"></i></span>
+                    <p>{{this.body}}</p>
                 </div>
 
 
             </div>
         </div>
     </div>
+    {{/each}}
+    {{else}}
+    <div class="modal modal-lg" id="view-comments-modal" role="dialog" aria-labelledby="myModalLabel"
+        data-backdrop="false">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h4 class="sign-in-text modal-title w-100 font-weight-bold">Notes and Comments</h4>
+                    <button type="submit" class="close-modal" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <div class="comment-container">
+                    <p>You have no comments on this article</p>
+                </div>
 
 
+            </div>
+        </div>
+    </div>
+    {{/if}}
 </main>
