--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -146,7 +146,7 @@ header h1 {
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
-  color: #2e86de;
+  color: #e74c3c;
 }
 
 .card .button-container {
