--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -45,7 +45,7 @@
                     <span class="delete-article" data-id={{this._id}} aria-hidden="true">Delete Article<i
                             class="fas fa-2x fa-times-circle"></i></span>
                     </button>
-                    <a href={{this.link}}>
+                    <a href={{this.link}} target="_blank">
 
                         <div class="card-img-top mask rgba-blue-strong">
                             <img src={{this.image}} height="200px" width="100%">
