--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,8 +14,8 @@
 
 .jumbotron .row {
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding: 0px;
   margin: auto;
 }
@@ -25,8 +25,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin: 0 auto;
 }
 
@@ -80,8 +80,8 @@ header .top-nav-collapse {
 
 header .wow {
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
+  -ms-flex-pack: end;
+  justify-content: end;
 }
 
 header h1 {
@@ -89,7 +89,7 @@ header h1 {
   color: #fff;
   font-size: 6rem;
   -ms-flex-item-align: baseline;
-      align-self: baseline;
+  align-self: baseline;
   padding-top: 3.5rem;
 }
 
@@ -102,8 +102,8 @@ header h1 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .main-content #scrape {
@@ -125,6 +125,7 @@ header h1 {
 .card {
   height: 475px;
   margin: .5rem;
+  transition: all 0.2s;
 }
 
 .card .card-title {
@@ -154,7 +155,15 @@ header h1 {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
+}
+
+.card a {
+  text-decoration: none;
+}
+
+.card:hover {
+  transform: translateY(2px)
 }
 
 .saved-page h1 {
@@ -201,6 +210,7 @@ header h1 {
 }
 
 /* Bootstrap Extra Large */
+
 @media screen and (max-width: 1200px) {
   #title {
     font-size: 5rem;
@@ -223,6 +233,7 @@ header h1 {
 }
 
 /* Media Query- Ipad Pro*/
+
 @media screen and (max-width: 1024px) {
   .card {
     margin: .5rem;
@@ -241,6 +252,7 @@ header h1 {
 }
 
 /* Media Query - Bootstrap Large */
+
 @media screen and (max-width: 992px) {
   #title {
     font-size: 5rem;
@@ -305,6 +317,7 @@ header h1 {
 }
 
 /*Media Query - Iphone 6/7/8 PLUS */
+
 @media screen and (max-width: 414px) {
   .jumbotron {
     padding: 0px;
@@ -330,4 +343,5 @@ header h1 {
 }
 
 /*Media Query - Iphone 6/7/8/X*/
+
 /*# sourceMappingURL=style.css.map */
